--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 12+Rules+to+Learn+to+Code+eBook-Copyright+App+Brewery.pdf
 Syllabus+for+100+Days+of+Python.pdf
 Python+Syntax+Cheat+Sheet+Booklet.pdf
+misc.py
