--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ Syllabus+for+100+Days+of+Python.pdf
 Python+Syntax+Cheat+Sheet+Booklet.pdf
 misc.py
 bills.py
+temp.py
+__pycache__/temp.cpython-39.pyc
