nato alphabets working

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,7 @@ day_19/main2.py
 data.txt
 Mail Merge Project Start/*
 
+NATO Alphabet Project/*
+map_challenge/us-states-game-start/*
+
+map_challenge/us-states-game-start/State_to_learn.csv
