--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,5 @@ NATO Alphabet Project/*
 map_challenge/us-states-game-start/*
 
 map_challenge/us-states-game-start/State_to_learn.csv
+Tkinter/playground.py
+
