--- a/.gitignore
+++ b/.gitignore
@@ -29,5 +29,6 @@ NATO Alphabet Project/*
 map_challenge/us-states-game-start/*
 
 map_challenge/us-states-game-start/State_to_learn.csv
-Tkinter/playground.py
+/Users/moe/Google Drive/Data_Science/ds_courses/Python_Cpp_DS/hundred_days_pyhon/*.zip
+*.zip
 
