--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@ map_challenge/us-states-game-start/State_to_learn.csv
 /Users/moe/Google Drive/Data_Science/ds_courses/Python_Cpp_DS/hundred_days_pyhon/*.zip
 *.zip
 
+/password_generator/pass.py
